# pdfPulse

./: .gitignore  CMakeLists.txt  Makefile
data/: Some_Other_Text.docx  hello_world.docx  teste_1.docx
src/: .gitignore  CMakeLists.txt  Makefile  main.cpp  pdf_builder.cpp  pdf_builder.hpp  pdf_pulse.cpp  utils.cpp  xml_parser.cpp  xml_parser.hpp  zip_extractor.cpp  zip_extractor.hpp
src/extLibs/: CMakeLists.txt
src/extLibs/rapidxml-1.13/: CMakeLists.txt
src/extlibs/libiconv/: .gitignore  CMakeLists.txt
src/extlibs/rapidxml/: rapidxml.hpp
src/include/: globals.hpp  pdf_builder.hpp  pdf_pulse.hpp  printer.hpp  utils.hpp  xml_parser.hpp  zip_extractor.hpp
src/test/: main.cpp
